Bug 42880 - [G33 SNA] Occasional X segfault, usually during video playback using latest intel GIT
Summary: [G33 SNA] Occasional X segfault, usually during video playback using latest i...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-13 09:31 UTC by Matti Hämäläinen
Modified: 2011-11-14 08:23 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg log from the first crash (297.59 KB, text/plain)
2011-11-13 09:31 UTC, Matti Hämäläinen
no flags Details
Xorg log from the second crash (30.42 KB, text/plain)
2011-11-13 09:32 UTC, Matti Hämäläinen
no flags Details

Description Matti Hämäläinen 2011-11-13 09:31:04 UTC
Created attachment 53479 [details]
Xorg log from the first crash

After upgrading xf86-video-intel, I have experienced two occasions of Xorg segfaulting, both events occured while playing video, but I am not sure if this is actually relevant.

I am currently using GIT f0acc6c0f15875fd51f6df6c8f13d589f9149771, but first segfault occured with a slightly older revision.

Based on the backtrace from Xorg.log, I'd suspect it might have something to do with the putimage changes. Unfortunately the segfault only seems to trigger after hours of use or at least very rarely, so bisecting would not be easy.

-- Window manager: WindowMaker 0.92 (obviously not using composition or such)
-- chipset: 00:02.0 VGA compatible controller: Intel Corporation 82G33/G31
Express Integrated Graphics Controller (rev 10)
-- system architecture: i686
-- xf86-video-intel: GIT f0acc6c0f15875fd51f6df6c8f13d589f9149771
-- xserver/mesa/etc: latest in Debian Testing: X.Org X Server 1.11.1.901
(1.11.2 RC 1)
-- libpixman: 0.24.0 (self-built package from Debian Experimental)
-- libdrm version: 2.4.27-1
-- kernel version: 3.0.8
-- Linux distribution: Debian Testing aka Wheezy
-- Machine or mobo model: Asus P5KPL-CM
-- Display connector: VGA
Comment 1 Matti Hämäläinen 2011-11-13 09:32:15 UTC
Created attachment 53480 [details]
Xorg log from the second crash

As you can see, the logs and backtraces are almost identical (apart from the timestamps.)
Comment 2 Chris Wilson 2011-11-13 09:48:00 UTC
Can you please convert the addresses to symbols using addr2line -e /usr/lib/xorg/modules/drivers/intel_drv.so 0x74a11 0x769e0
Comment 3 Matti Hämäläinen 2011-11-13 09:51:44 UTC
Of course.

$ addr2line -e /usr/lib/xorg/modules/drivers/intel_drv.so 0x74a11 0x769e0
/misc/incoming/packages/xf86-video-intel/src/sna/sna_video.c:484
/misc/incoming/packages/xf86-video-intel/src/sna/sna_video_textured.c:259
Comment 4 Chris Wilson 2011-11-13 09:57:54 UTC
I wonder how that even survived light testing!

commit 7ad3b377a394c9342c3ab2f003d48b7cb3c0891d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Nov 13 17:53:11 2011 +0000

    sna/video: Use the right pointer for unmapping
    
    Don't just deference any old random pointer, use the one we actually
    mapped in the first place!
    
    Reported-by: Matti Hamalainen <ccr@tnsp.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42880
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 5 Matti Hämäläinen 2011-11-13 10:04:34 UTC
Cheers, thanks for the quick fix! You rock.
Comment 6 Matti Hämäläinen 2011-11-14 08:23:26 UTC
Issue not present after commit 7ad3b377a394c9342c3ab2f003d48b7cb3c0891d, closing.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.