sna/video: Use the right pointer for unmapping

Don't just deference any old random pointer, use the one we actually
mapped in the first place!

Reported-by: Matti Hamalainen <ccr@tnsp.org>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=42880
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>